--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
+    "jwt-decode": "^4.0.0",
     "next": "^14.2.4",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
